# sdkwork-commerce

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
crates/: README.md
crates/sdkwork-commerce-account-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-account-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-account-rust/src/commands/: mod.rs
crates/sdkwork-commerce-account-rust/src/domain/: mod.rs
crates/sdkwork-commerce-account-rust/src/ports/: mod.rs
crates/sdkwork-commerce-account-rust/src/queries/: mod.rs
crates/sdkwork-commerce-account-rust/src/service/: mod.rs
crates/sdkwork-commerce-account-rust/tests/: account_standard.rs
crates/sdkwork-commerce-bootstrap-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-bootstrap-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-bootstrap-rust/src/: lib.rs
crates/sdkwork-commerce-bootstrap-rust/tests/: commerce_bootstrap_standard.rs
crates/sdkwork-commerce-catalog-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-catalog-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-catalog-rust/src/commands/: mod.rs
crates/sdkwork-commerce-catalog-rust/src/domain/: mod.rs
crates/sdkwork-commerce-catalog-rust/src/ports/: mod.rs
crates/sdkwork-commerce-catalog-rust/src/queries/: mod.rs
crates/sdkwork-commerce-catalog-rust/src/service/: mod.rs
crates/sdkwork-commerce-catalog-rust/tests/: catalog_standard.rs
crates/sdkwork-commerce-http-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-http-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-http-rust/src/: account_router.rs  billing_router.rs  foundation_router.rs  invoice_router.rs  lib.rs  promotion_router.rs  recharge_router.rs  request_identity.rs  subject.rs
crates/sdkwork-commerce-http-rust/tests/: app_billing_history_router.rs  app_commerce_foundation_router.rs  app_commerce_router_composition.rs  app_invoice_router.rs  app_promotion_router.rs  app_recharge_checkout_router.rs  commerce_http_standard.rs
crates/sdkwork-commerce-inventory-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-inventory-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-inventory-rust/src/commands/: mod.rs
crates/sdkwork-commerce-inventory-rust/src/domain/: mod.rs
crates/sdkwork-commerce-inventory-rust/src/ports/: mod.rs
crates/sdkwork-commerce-inventory-rust/src/queries/: mod.rs
crates/sdkwork-commerce-inventory-rust/src/service/: mod.rs
crates/sdkwork-commerce-inventory-rust/tests/: inventory_standard.rs
crates/sdkwork-commerce-invoice-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-invoice-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-invoice-rust/src/domain/: mod.rs
crates/sdkwork-commerce-invoice-rust/src/ports/: mod.rs
crates/sdkwork-commerce-invoice-rust/src/queries/: mod.rs
crates/sdkwork-commerce-invoice-rust/src/service/: mod.rs
crates/sdkwork-commerce-invoice-rust/tests/: invoice_standard.rs
crates/sdkwork-commerce-membership-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-membership-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-membership-rust/src/domain/: mod.rs
crates/sdkwork-commerce-membership-rust/src/ports/: mod.rs
crates/sdkwork-commerce-membership-rust/src/queries/: mod.rs
crates/sdkwork-commerce-membership-rust/src/service/: mod.rs
crates/sdkwork-commerce-membership-rust/tests/: membership_standard.rs
crates/sdkwork-commerce-membership-sqlx-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-membership-sqlx-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-membership-sqlx-rust/src/: admin_router.rs  lib.rs  postgres.rs  request_identity.rs  router.rs  seed.rs  shared.rs  sqlite.rs  subject.rs  types.rs
crates/sdkwork-commerce-membership-sqlx-rust/tests/: membership_sqlx_standard.rs
crates/sdkwork-commerce-order-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-order-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-order-rust/src/commands/: mod.rs
crates/sdkwork-commerce-order-rust/tests/: order_standard.rs
crates/sdkwork-commerce-payment-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-payment-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-payment-rust/tests/: payment_standard.rs
crates/sdkwork-commerce-rpc-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-rpc-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-rpc-rust/src/: lib.rs
crates/sdkwork-commerce-rpc-rust/tests/: commerce_rpc_standard.rs
crates/sdkwork-commerce-runtime-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-runtime-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-runtime-rust/src/: account_runtime.rs  lib.rs
crates/sdkwork-commerce-runtime-rust/tests/: domain_crate_structure_standard.rs  domain_service_contracts_standard.rs  runtime_standard.rs
crates/sdkwork-commerce-storage-sqlx-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-storage-sqlx-rust/migrations/: 0001_commerce_foundation.sql
crates/sdkwork-commerce-storage-sqlx-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-storage-sqlx-rust/src/: lib.rs  postgres_account.rs  postgres_billing.rs  postgres_exchange.rs  postgres_invoice.rs  postgres_payment.rs  postgres_promotion.rs  postgres_recharge.rs  sqlite_account.rs  sqlite_billing.rs  sqlite_exchange.rs  sqlite_invoice.rs  sqlite_payment.rs  sqlite_promotion.rs  sqlite_recharge.rs
crates/sdkwork-commerce-storage-sqlx-rust/tests/: account_summary_read_model.rs  commerce_storage_standard.rs  payment_records_read_model.rs  postgres_promotion_api.rs
crates/sdkwork-commerce-tauri-rust/: Cargo.toml  README.md
crates/sdkwork-commerce-tauri-rust/specs/: README.md  component.spec.json
crates/sdkwork-commerce-tauri-rust/src/: lib.rs
crates/sdkwork-commerce-tauri-rust/tests/: commerce_tauri_standard.rs
(+90 files in other folders)
