[package]
name = "sdkwork_commerce_account"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork commerce account, wallet balance, ledger, and prehold domain rules for local/private Rust deployments."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_core = { path = "../sdkwork-commerce-core-rust" }
