[package]
name = "sdkwork_commerce_bootstrap"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork commerce local/private bootstrap manifest composition."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_core.workspace = true
sdkwork_commerce_runtime.workspace = true
sdkwork_commerce_storage_sqlx.workspace = true
sdkwork_commerce_http.workspace = true
sdkwork_commerce_tauri.workspace = true
