[package]
name = "sdkwork_commerce_catalog"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork commerce product catalog domain rules for SPU, SKU, categories, attributes, carts, and buyer addresses."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_core.workspace = true
