[package]
name = "sdkwork_commerce_http"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork canonical commerce HTTP route contracts for Rust local/private deployments."

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
sdkwork_commerce_account = { path = "../sdkwork-commerce-account-rust" }
sdkwork_commerce_core = { path = "../sdkwork-commerce-core-rust" }
sdkwork_commerce_invoice = { path = "../sdkwork-commerce-invoice-rust" }
sdkwork_commerce_payment = { path = "../sdkwork-commerce-payment-rust" }
sdkwork_commerce_promotion = { path = "../sdkwork-commerce-promotion-rust" }
sdkwork_commerce_runtime = { path = "../sdkwork-commerce-runtime-rust" }
sdkwork_commerce_storage_sqlx = { path = "../sdkwork-commerce-storage-sqlx-rust" }
sdkwork_http_context = { path = "../../../../javasource/spring-ai-plus/spring-ai-plus-business/apps/sdkwork-appbase/packages/native-rust/foundation/sdkwork-http-context-rust" }
sdkwork_iam_core = { path = "../../../../javasource/spring-ai-plus/spring-ai-plus-business/apps/sdkwork-appbase/packages/native-rust/iam/sdkwork-iam-core-rust" }

[dev-dependencies]
http-body-util = "0.1"
sdkwork_commerce_membership_sqlx = { path = "../sdkwork-commerce-membership-sqlx-rust" }
tokio = { version = "1.51", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
