[package]
name = "sdkwork_commerce_http"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork canonical commerce HTTP route contracts for Rust local/private deployments."

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
sdkwork_commerce_account.workspace = true
sdkwork_commerce_core.workspace = true
sdkwork_commerce_invoice.workspace = true
sdkwork_commerce_payment.workspace = true
sdkwork_commerce_promotion.workspace = true
sdkwork_commerce_runtime.workspace = true
sdkwork_commerce_storage_sqlx.workspace = true
sdkwork_http_context.workspace = true
sdkwork_iam_core.workspace = true

[dev-dependencies]
http-body-util = "0.1"
sdkwork_commerce_membership_sqlx.workspace = true
tokio = { version = "1.51", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
