[package]
name = "sdkwork_commerce_inventory"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork commerce inventory domain rules for stock, reservations, deductions, releases, and movements."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_core.workspace = true
