[package]
name = "sdkwork_commerce_membership"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork commerce membership plan, package, entitlement, and subscription domain rules for local/private Rust deployments."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_core.workspace = true
