[package]
name = "sdkwork_commerce_membership_sqlx"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork commerce Membership SQLx integration and reusable seed installation."

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
sdkwork_commerce_core = { path = "../sdkwork-commerce-core-rust" }
sdkwork_commerce_bootstrap = { path = "../sdkwork-commerce-bootstrap-rust" }
sdkwork_commerce_storage_sqlx = { path = "../sdkwork-commerce-storage-sqlx-rust" }
sdkwork_http_context = { path = "../../../sdkwork-appbase/packages/native-rust/foundation/sdkwork-http-context-rust" }
sdkwork_iam_core = { path = "../../../sdkwork-appbase/packages/native-rust/iam/sdkwork-iam-core-rust" }

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
