[package]
name = "sdkwork_commerce_order"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork commerce order lifecycle domain rules for local/private Rust deployments."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_core = { path = "../sdkwork-commerce-core-rust" }
