[package]
name = "sdkwork_commerce_rpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork commerce RPC service manifest foundation."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_rpc_core = { path = "../../../../javasource/spring-ai-plus/spring-ai-plus-business/apps/sdkwork-appbase/packages/native-rust/foundation/sdkwork-rpc-core-rust" }
