[package]
name = "sdkwork_commerce_runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork commerce local/private Rust runtime composition for first-slice commerce services."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_core.workspace = true
sdkwork_commerce_account.workspace = true
sdkwork_commerce_catalog.workspace = true
sdkwork_commerce_inventory.workspace = true
sdkwork_commerce_order.workspace = true
sdkwork_commerce_payment.workspace = true
sdkwork_commerce_invoice.workspace = true
sdkwork_commerce_promotion.workspace = true
sdkwork_commerce_membership.workspace = true
