[package]
name = "sdkwork_commerce_storage_sqlx"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork canonical commerce SQL table catalog and migration contracts for local/private deployments."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_account = { path = "../sdkwork-commerce-account-rust" }
sdkwork_commerce_core = { path = "../sdkwork-commerce-core-rust" }
sdkwork_commerce_invoice = { path = "../sdkwork-commerce-invoice-rust" }
sdkwork_commerce_payment = { path = "../sdkwork-commerce-payment-rust" }
sdkwork_commerce_promotion = { path = "../sdkwork-commerce-promotion-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }

[dev-dependencies]
tokio = { version = "1.51", features = ["macros", "rt-multi-thread"] }
